# RustyChatAPI

./: .gitignore  Cargo.toml
.github/workflows/: rust_workflow.yml
migrations/: 20260321032815_init.down.sql  20260321032815_init.sql  20260321092524_optimizational_indexies.down.sql  20260321092524_optimizational_indexies.sql  20260321220203_moderator_table.down.sql  20260321220203_moderator_table.sql  20260322030330_improving_messages_table.down.sql  20260322030330_improving_messages_table.sql  20260417082827_fix_password_hash_field_length.down.sql  20260417082827_fix_password_hash_field_length.sql
src/: auth.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs
src/repositories/: auth.rs  chat.rs
src/utils/: mod.rs  tag_generator.rs  utils.rs
