[package]
name = "RustyChatAPI"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
axum = { version = "0.8.8", features = ["macros", "json"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = {version = "0.15.7"}
serde_json = "1.0.149"
argon2 = "0.5.3"
regex = "1.10"
jsonwebtoken = { version="10.3.0", features=["rust_crypto"] }
rand = "0.10.0"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
